deixando menor para tudo

--- a/templates/tabelas_top_ml.html
+++ b/templates/tabelas_top_ml.html
@@ -9,7 +9,7 @@
 <style>
   .th-icone {display: none;}
   .th-nao-icone {display: inline;}
-  @media screen and (max-width: 1200px) {
+  @media (max-width: 1200px) {
     .th-icone {display: inline;}
     .th-nao-icone {display: none;}
   }
