removendo texto desnecessário

--- a/professores/templates/professores/resultado_p_certificacao.html
+++ b/professores/templates/professores/resultado_p_certificacao.html
@@ -198,7 +198,7 @@
                         <span class="texto-curto">{% lng_d_de_ate notas_falconi.banca.startDate notas_falconi.banca.endDate %}</span>
                       </span>
                     {% endif %}
-                    <ul class="membros">{{notas_falconi.avaliadores.count}} {% lng "avaliadores" "evaluators" %}
+                    <ul class="membros">{{notas_falconi.avaliadores.count}}
                       {% for avaliador in notas_falconi.avaliadores %}
                         <li>
                           <span style="white-space: nowrap;">
