--- a/organizacoes/templates/organizacoes/proposta_submissao.html
+++ b/organizacoes/templates/organizacoes/proposta_submissao.html
@@ -14,12 +14,14 @@
   <script src="{% static 'js/aviso_perda_edicao.js' %}"></script>
 
   <style>
+    {% comment %} vvv REMOVER vvv {% endcomment %}
     .quad_pfe {
       border: solid black 2px;
       border-radius: 8px;
       padding: 16px;
     }
-
+    {% comment %} ˆˆˆˆˆˆˆˆˆˆ {% endcomment %}
+    
     .topico {
       font-weight: bold;
       margin-top: 8px;
