--- a/projetos/static/css/style.css
+++ b/projetos/static/css/style.css
@@ -299,3 +299,9 @@ tbody tr:nth-child(odd) {background-color: #f9f9f9;} */
 .curso-chip:focus {
   box-shadow: 0 1px 8px rgba(16,58,126,.18);
 }
+
+.quad_pfe {
+  border: solid black 2px;
+  border-radius: 8px;
+  padding: 16px;
+}
