--- a/users/templates/users/estudantes_notas.html
+++ b/users/templates/users/estudantes_notas.html
@@ -13,6 +13,7 @@
 {% load exibe_notas %}
 {% load documentos %}
 {% load negate %}
+{% load nospaces %}
 
 {% block head %}
   {% include "tabelas_includes.html" %}
@@ -55,11 +56,11 @@
             {% for alocacao in aluno.alocacao_set.all %}
               {% if ano == 0 or alocacao.projeto.ano == ano and alocacao.projeto.semestre == semestre %}
                 {% if alocacao.projeto and alocacao.projeto.organizacao %}
-                  [<a href="{% url 'organizacao_completo' alocacao.projeto.organizacao.id %}">{{alocacao.projeto.organizacao}}</a>]
+                  [<a href="{% url 'organizacao_completo' alocacao.projeto.organizacao.id %}">{{alocacao.projeto.organizacao}}</a>] <a
                 {% else %}
-                  {% lng "[SEM ORGANIZAÇÃO]" "[NO ORGANIZATION]" %}
+                  {% lng "[SEM ORGANIZAÇÃO]" "[NO ORGANIZATION]" %} <a
                 {% endif %}
-                <a href="{% url 'projeto_infos' alocacao.projeto.id %}">{{alocacao.projeto.get_titulo}}</a>
+                href="{% url 'projeto_infos' alocacao.projeto.id %}">{{alocacao.projeto.get_titulo}}</a>
                 {% include "tipo_projeto.html" with projeto=alocacao.projeto %}
               {% endif %}
             {% endfor %}
@@ -68,38 +69,22 @@
 
         {% with alocacao=aluno.get_alocacoes|dict_key:ano_semestre %}
           <td>
-            <script>
-              var nota_linha = 0;
-              var peso_linha = 0;
-              var nota_indiv = 0;
-              var peso_indiv = 0;
-            </script>
-            {% comment %} {% for aval, nota, peso, descr in aluno|recuper_notas_estudante|dict_key:ano_semestre %} <!-- Notas --> {% endcomment %}
-            {% for aval in aluno|recuper_notas_estudante|dict_key:ano_semestre %} <!-- Notas -->
-                <span
-                style="white-space: nowrap;"
-                data-toggle="tooltip" data-html="true" animation="true" 
-                title="{{aval.nome}} | peso={% widthratio aval.peso 1 100 %}%<br>{% for o,p in aval.objetivos.items %}&bull;{{o.titulo}} = <b {% if p.0 < 5 %}class='text-danger'{% endif %}>{{p.0|floatformat:1}}</b><br>{% endfor %}">
-                  {{aval.sigla}}<span class="pesos_aval">({% widthratio aval.peso 1 100 %}%)</span
-                  >={% if aval.peso > 0 %}<span
-                      lang="pt">{% language "pt-br" %}{{aval.nota|floatformat:1}}{% endlanguage %}</span><span
-                      lang="en" style="display:none">{% language "en" %}{{ aval.nota|floatformat:1}}{% endlanguage %}</span>
-                  {% else %}{% if aval.nota >= 5 %}&#128077;{% else %}&#128078;{% endif %}{% endif %}
-                  {% if aval.nota == None %}
-                    <span style="color:red">??,??</span>
-                  {% endif %}
-                </span>
-                {% if aval.nota != None and aval.peso != None %}
-                  <script>
-                    nota_linha += {{aval.nota|unlocalize}}*{{aval.peso|unlocalize}};
-                    peso_linha += {{aval.peso|unlocalize}};
-                    {% if aval.sigla == "RII" or aval.sigla == "RFI" %}
-                      nota_indiv += {{aval.nota|unlocalize}}*{{aval.peso|unlocalize}};
-                      peso_indiv += {{aval.peso|unlocalize}};
-                    {% endif %}
-                  </script>
-                {% endif %}
-            {% endfor %}
+            {% for aval in aluno|recuper_notas_estudante|dict_key:ano_semestre %}{% nospaces %}<!-- Notas -->
+              <span style="white-space: nowrap;" data-toggle="tooltip" data-html="true" animation="true" 
+              title="{{aval.nome}} | peso={% widthratio aval.peso 1 100 %}%<br>{% for o,p in aval.objetivos.items %}&bull;{{o.titulo}} = <b {% if p.0 < 5 %}class='text-danger'{% endif %}>{{p.0|floatformat:1}}</b><br>{% endfor %}"
+              lang="pt">{% language "pt-br" %}
+                {{aval.sigla}}<span class="pesos_aval">({% widthratio aval.peso 1 100 %}%)</span
+                >={% if aval.peso > 0 %}{{aval.nota|floatformat:1}}{% else %}{% if aval.nota >= 5 %}&#128077;{% else %}&#128078;{% endif %}{% endif %}
+                {% if aval.nota == None %}<span style="color:red">??,??</span>{% endif %}
+              {% endlanguage %}</span>
+              <span style="white-space: nowrap;" data-toggle="tooltip" data-html="true" animation="true" 
+              title="{{aval.nome}} | peso={% widthratio aval.peso 1 100 %}%<br>{% for o,p in aval.objetivos.items %}&bull;{{o.titulo_en}} = <b {% if p.0 < 5 %}class='text-danger'{% endif %}>{{p.0|floatformat:1}}</b><br>{% endfor %}"
+              lang="en" style="display:none">{% language "en" %}
+                {{aval.sigla}}<span class="pesos_aval">({% widthratio aval.peso 1 100 %}%)</span
+                >={% if aval.peso > 0 %}{{aval.nota|floatformat:1}}{% else %}{% if aval.nota >= 5 %}&#128077;{% else %}&#128078;{% endif %}{% endif %}
+                {% if aval.nota == None %}<span style="color:red">??.??</span>{% endif %}
+              {% endlanguage %}</span>
+            {% endnospaces %} {% endfor %}{% comment %} Para o espaço para as notas acima {% endcomment %}
           </td>
 
           {% if alocacao %}
