--- a/users/templates/users/estudantes_notas.html
+++ b/users/templates/users/estudantes_notas.html
@@ -70,20 +70,20 @@
         {% with alocacao=aluno.get_alocacoes|dict_key:ano_semestre %}
           <td>
             {% for aval in aluno|recuper_notas_estudante|dict_key:ano_semestre %}{% nospaces %}<!-- Notas -->
-              <span style="white-space: nowrap;" data-toggle="tooltip" data-html="true" animation="true" 
-              title="{{aval.nome}} | peso={% widthratio aval.peso 1 100 %}%<br>{% for o,p in aval.objetivos.items %}&bull;{{o.titulo}} = <b {% if p.0 < 5 %}class='text-danger'{% endif %}>{{p.0|floatformat:1}}</b><br>{% endfor %}"
-              lang="pt">{% language "pt-br" %}
+              {% language "pt-br" %}<span style="white-space: nowrap;" data-toggle="tooltip" data-html="true" animation="true" 
+              title="{{aval.nome}} | peso={% widthratio aval.peso 1 100 %}%<br>{% for o,p in aval.objetivos.items %}&bull;{{o.titulo}}=<b {% if p.0 < 5 %}class='text-danger'{% endif %}>{{p.0|floatformat:1}}</b><br>{% endfor %}"
+              lang="pt">
                 {{aval.sigla}}<span class="pesos_aval">({% widthratio aval.peso 1 100 %}%)</span
                 >={% if aval.peso > 0 %}{{aval.nota|floatformat:1}}{% else %}{% if aval.nota >= 5 %}&#128077;{% else %}&#128078;{% endif %}{% endif %}
                 {% if aval.nota == None %}<span style="color:red">??,??</span>{% endif %}
-              {% endlanguage %}</span>
-              <span style="white-space: nowrap;" data-toggle="tooltip" data-html="true" animation="true" 
-              title="{{aval.nome}} | peso={% widthratio aval.peso 1 100 %}%<br>{% for o,p in aval.objetivos.items %}&bull;{{o.titulo_en}} = <b {% if p.0 < 5 %}class='text-danger'{% endif %}>{{p.0|floatformat:1}}</b><br>{% endfor %}"
-              lang="en" style="display:none">{% language "en" %}
+              </span>{% endlanguage %}
+              {% language "en" %}<span style="white-space: nowrap;" data-toggle="tooltip" data-html="true" animation="true" 
+              title="{{aval.nome_en}} | weight={% widthratio aval.peso 1 100 %}%<br>{% for o,p in aval.objetivos.items %}&bull;{{o.titulo_en}}=<b {% if p.0 < 5 %}class='text-danger'{% endif %}>{{p.0|floatformat:1}}</b><br>{% endfor %}"
+              lang="en" style="display:none">
                 {{aval.sigla}}<span class="pesos_aval">({% widthratio aval.peso 1 100 %}%)</span
                 >={% if aval.peso > 0 %}{{aval.nota|floatformat:1}}{% else %}{% if aval.nota >= 5 %}&#128077;{% else %}&#128078;{% endif %}{% endif %}
                 {% if aval.nota == None %}<span style="color:red">??.??</span>{% endif %}
-              {% endlanguage %}</span>
+              </span>{% endlanguage %}
             {% endnospaces %} {% endfor %}{% comment %} Para o espaço para as notas acima {% endcomment %}
           </td>
 
