--- a/projetos/templates/projetos/meuprojeto_estudantes.html
+++ b/projetos/templates/projetos/meuprojeto_estudantes.html
@@ -10,6 +10,7 @@
 {% load get_notas %}
 {% load linguas %}
 {% load get_descontos %}
+{% load bleach %}
 
 {% block head %}
   <link rel="stylesheet" href="{% static 'css/div_arrend.css' %}">
@@ -60,7 +61,7 @@
               {% for dinamica in encontros %} 
                 <li>
                   {{dinamica.startDate}} - {{dinamica.endDate|date:'H:i'}}
-                  {% if dinamica.location %}; em: <span style="word-break: break-all;">{{dinamica.location}}</span> {% endif %}
+                  {% if dinamica.location %}; em: <span style="word-break: break-all;">{{dinamica.location|bleach_urlize|safe}}</span> {% endif %}
                   {% if dinamica.facilitador %}|
                     {% lng_g dinamica.facilitador.genero "Facilitador" "Facilitadora" "Facilitator" %}:
                     {{dinamica.facilitador.get_full_name}}
